--- a/test/multicrab_data.cfg
+++ b/test/multicrab_data.cfg
@@ -5,6 +5,7 @@
 CMSSW.pset            = runObjectProducer_data_cfg.py 
 USER.user_remote_dir  = edmnutples_2013-10-16/
 CMSSW.lumi_mask       = Cert_190456-208686_8TeV_22Jan2013ReReco_Collisions12_JSON.txt
+#/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions12/8TeV/Reprocessing/Cert_190456-208686_8TeV_22Jan2013ReReco_Collisions12_JSON.txt
 
 [Data8TeV_DoubleMu2012A]
 CMSSW.datasetpath     = /DoubleMu/Run2012A-22Jan2013-v1/AOD
